--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ deploy:
   file: 'package.json'
   on:
     repo: go-harpist/harpist
-    branch: master
+    condition: $TRAVIS_BRANCH =~ ^master$
     tags: true
